crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_list_wrong_kind.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unListData (listData false)
--- unoptimized UPLC
(program 1.1.0 [(builtin unListData) [(builtin listData) (con bool False)]])
--- optimized Core
let anf#1 : Data = listData false in
unListData anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin unListData) anf_2]) [(builtin listData) (con bool False)]])
--- isolated pass
--- core before
unListData (listData false)
--- uplc before
(program 1.1.0 [(builtin unListData) [(builtin listData) (con bool False)]])
--- core after
unListData (listData false)
--- uplc after
(program 1.1.0 [(builtin unListData) [(builtin listData) (con bool False)]])
--- result
error: Runtime(ExpectedList(Boolean(false)))
--- logs
[]
