crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_map_bound.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
let x#13 : list (pair Data Data) = trace "once" in (con (list (pair data data)) [((I 7), (I 7))]) in
let encoded#14 : Data = mapData x#13 in
let alias#15 : Data = encoded#14 in
trace "after encoding" in unMapData alias#15
--- unoptimized UPLC
(program 1.1.0
  [(lam x_13
    [(lam encoded_14
      [(lam alias_15
        (force
          [[(force (builtin trace)) (con string "after encoding")]
            (delay [(builtin unMapData) alias_15])]))
        encoded_14])
      [(builtin mapData) x_13]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay (con (list (pair data data)) [((I 7), (I 7))]))])])
--- optimized Core
let x#1 : list (pair Data Data) = trace "once" in (con (list (pair data data)) [((I 7), (I 7))]) in
let encoded#2 : Data = mapData x#1 in
trace "after encoding" in x#1
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam x_3
      [(lam encoded_4 (force [[builtin_5 (con string "after encoding")] (delay x_3)]))
        [(builtin mapData) x_3]])
      (force
        [[builtin_5 (con string "once")]
          (delay (con (list (pair data data)) [((I 7), (I 7))]))])])
    (force (builtin trace))])
--- isolated pass
--- core before
let x#13 : list (pair Data Data) = trace "once" in (con (list (pair data data)) [((I 7), (I 7))]) in
let encoded#14 : Data = mapData x#13 in
let alias#15 : Data = encoded#14 in
trace "after encoding" in unMapData alias#15
--- uplc before
(program 1.1.0
  [(lam x_13
    [(lam encoded_14
      [(lam alias_15
        (force
          [[(force (builtin trace)) (con string "after encoding")]
            (delay [(builtin unMapData) alias_15])]))
        encoded_14])
      [(builtin mapData) x_13]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay (con (list (pair data data)) [((I 7), (I 7))]))])])
--- core after
let x#13 : list (pair Data Data) = trace "once" in (con (list (pair data data)) [((I 7), (I 7))]) in
let encoded#14 : Data = mapData x#13 in
let alias#15 : Data = encoded#14 in
trace "after encoding" in x#13
--- uplc after
(program 1.1.0
  [(lam x_13
    [(lam encoded_14
      [(lam alias_15
        (force [[(force (builtin trace)) (con string "after encoding")] (delay x_13)]))
        encoded_14])
      [(builtin mapData) x_13]])
    (force
      [[(force (builtin trace)) (con string "once")]
        (delay (con (list (pair data data)) [((I 7), (I 7))]))])])
--- result
(con (list (pair data data)) [((I 7), (I 7))])
--- logs
["once", "after encoding"]
