crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_map_decoded.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unMapData (mapData (unMapData (con data (Map [(I 7, I 7)]))))
--- unoptimized UPLC
(program 1.1.0
  [(builtin unMapData)
    [(builtin mapData) [(builtin unMapData) (con data (Map [(I 7, I 7)]))]]])
--- optimized Core
(con (list (pair data data)) [((I 7), (I 7))])
--- optimized UPLC
(program 1.1.0 (con (list (pair data data)) [((I 7), (I 7))]))
--- isolated pass
--- core before
unMapData (mapData (unMapData (con data (Map [(I 7, I 7)]))))
--- uplc before
(program 1.1.0
  [(builtin unMapData)
    [(builtin mapData) [(builtin unMapData) (con data (Map [(I 7, I 7)]))]]])
--- core after
unMapData (con data (Map [(I 7, I 7)]))
--- uplc after
(program 1.1.0 [(builtin unMapData) (con data (Map [(I 7, I 7)]))])
--- result
(con (list (pair data data)) [((I 7), (I 7))])
--- logs
[]
