crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_map_oversaturated.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "format!(\"{}\\n--- isolated pass\\n{}\", fixture.code_snapshot(),\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unMapData (mapData (con (list (pair data data)) [((I 7), (I 7))])) 1
--- unoptimized UPLC
(program 1.1.0
  [[(builtin unMapData)
    [(builtin mapData) (con (list (pair data data)) [((I 7), (I 7))])]]
    (con integer 1)])
--- optimized Core
let anf#1 : Data = mapData (con (list (pair data data)) [((I 7), (I 7))]) in
let anf#2 : list (pair Data Data) = unMapData anf#1 in
anf#2 1
--- optimized UPLC
(program 1.1.0
  [(lam anf_3 [(lam anf_4 [anf_4 (con integer 1)]) [(builtin unMapData) anf_3]])
    [(builtin mapData) (con (list (pair data data)) [((I 7), (I 7))])]])
--- isolated pass
--- core before
unMapData (mapData (con (list (pair data data)) [((I 7), (I 7))])) 1
--- uplc before
(program 1.1.0
  [[(builtin unMapData)
    [(builtin mapData) (con (list (pair data data)) [((I 7), (I 7))])]]
    (con integer 1)])
--- core after
(con (list (pair data data)) [((I 7), (I 7))]) 1
--- uplc after
(program 1.1.0 [(con (list (pair data data)) [((I 7), (I 7))]) (con integer 1)])
--- result
error: NonFunctionApplication(Con(Integer(1)), Con(ProtoList(Pair(Data, Data), [ProtoPair(Data, Data, Data(Integer(7)), Data(Integer(7)))])))
--- logs
[]
