crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__inverse__representation_map_partial.snap
---
source: crates/nash-codegen/src/optimizer_tests/inverse.rs
expression: "crate::harness::pass_snapshot(b.arena, before,\nformat!(\"--- core before\\n{}\\n--- uplc before\\n{}\\n--- core after\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), left.uplc, pretty(after), right.uplc, right.result,\nright.logs))"
---
--- unoptimized Core
unMapData (mapData (con (list (pair data data)) [((I 7), (I 7))]))
--- unoptimized UPLC
(program 1.1.0
  [(builtin unMapData)
    [(builtin mapData) (con (list (pair data data)) [((I 7), (I 7))])]])
--- optimized Core
let anf#1 : Data = mapData (con (list (pair data data)) [((I 7), (I 7))]) in
unMapData anf#1
--- optimized UPLC
(program 1.1.0
  [(lam anf_2 [(builtin unMapData) anf_2])
    [(builtin mapData) (con (list (pair data data)) [((I 7), (I 7))])]])
--- isolated pass
--- core before
unMapData (mapData (con (list (pair data data)) [((I 7), (I 7))]))
--- uplc before
(program 1.1.0
  [(builtin unMapData)
    [(builtin mapData) (con (list (pair data data)) [((I 7), (I 7))])]])
--- core after
unMapData (mapData (con (list (pair data data)) [((I 7), (I 7))]))
--- uplc after
(program 1.1.0
  [(builtin unMapData)
    [(builtin mapData) (con (list (pair data data)) [((I 7), (I 7))])]])
--- result
(con (list (pair data data)) [((I 7), (I 7))])
--- logs
[]
